LeasedLineTools/src/objects/Product_Loaded_Status__c.object
<CustomObject>
    <description>Reporting on whether product loading has been successful or otherwise for a site reference and provider</description>
    <fields>
        <fullName>Leased_Line_Quote_Request__c</fullName>
        <label>Leased Line Quote Request</label>
        <referenceTo>Leased_Line_Quote_Request__c</referenceTo>
        <relationshipLabel>Product Loaded Statuses</relationshipLabel>
        <relationshipName>Product_Loaded_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>bt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>virgin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>talktalk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Loaded Status</label>
    <nameField>
        <label>Product Loaded Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Loaded Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>